<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/logo1"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:theme="@style/AppTheme" />-->

        <TextView
            android:layout_width="339dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/email_title"
            android:textSize="10sp"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter your Email ID"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/pwd" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Login"
                android:id="@+id/btnLogin"
                android:onClick="loginUser"
                android:textColor="#fff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Signup"
                android:onClick="navigatetoRegisterActivity"
                android:id="@+id/btnLinkToRegisterScreen"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>